css/style.css
h1 {
    font-size: 7vw;
    padding-top: 3%;
    padding-bottom: 3%;
    margin: 2%;
    color: #868BFE;
}
h2 {
    font-size: 5vw;
    margin: 1%;
}
p {
    font-size: 3.75vw;
    margin: 3%;
}
span {
  font-family: VT323;
  color: #868BFE;
}
/* BODY */
body{
    /* same font as HW2 */
    font-family: VT323;
    margin: 0;
    padding: 0;
}

/* frame for content */
#content {
    margin-top: 5vh;
}

/* HEADING */
#heading {
    height: 5vh;
    width: 100vw;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #e1e9ee;
    overflow-x: hidden;
    text-align: center;
}
#heading p {
    font-size: 1em;
    margin: 1%;
}

/* BOTTOM NAV */
.nav {
    height: 12%;
    width: 100vw;
    position: fixed;
    z-index: 1;
    bottom: 0;
    left: 0;
    background-color: #e1e9ee;
    overflow-x: hidden;
}
.nav-links {
    padding-top: 2vw;
    text-align: center;
}
.nav a {
    padding: 8px;
    text-decoration: none;
    font-size: 24px;
    color: #354b57;
    transition: 0.3s;
    text-align: center;
}
.nav img {
    width: 40px;
    height: 40px;
    padding-left: 6vw;
    padding-right: 6vw;
}

/* PROFILE */
#Profile {
    text-align: center;
}
#emote {
    max-width: 20vw;
    max-height: 10vh;
}
#avatar {
    align-items: center;
    justify-content: center;
    height: 45vh;
    z-index: -10
}
#profilePic {
    /* padding: 15%; */
    padding-top: 0;
    padding-bottom: 1%;
    max-width: 55vw;
    max-height: 30vh;
    position: absolute;
    left: 0;
    right: 0;
    margin-left: auto; 
    margin-right: auto; 
    margin-top: 0;
}
/* .avatarHead {
    position: absolute;
    left: 10%;
}
.avatarBody {
    position: absolute;
    left: 10%;
}
.avatarAcc {
    position: absolute;
    left: 10%;
} */
#avatarButton {
    max-width: 20vw;
    max-height: 20vh;
    margin: 0px;
    padding: 0px;
    display: inline-block;
    border-style: solid;
    border-width: 1px;
}
#Profile #clothes {
    font-family: VT323;
    z-index: 10;
    color:white;
    background-color:#868BFE;
    border-radius: 20px;
}
#Profile #done {
    font-family: VT323;
    z-index: 10;
    color:white;
    background-color:#868BFE;
}
#levelLabel, #expLabel  {
    padding: 0;
    margin: 0;
}
#exp {
    margin: 2vh;
}
#shortcut {
    margin-bottom: 25vh;
}

.customization {
  height: 70%;
  background-color:#f1f1f1;
  top:20%;
  z-index: 35;
  display: block;
  padding-bottom: 5px;
}


#StartProfile {
    background-color: #e1e9ee;
    font-family: VT323;
    font-size: 3.5vw;
    width: 80%;
    height: 15%;
    padding: 5%;
}

/* QUESTS */
#Quests {
    text-align: center;
    margin-bottom: 30vh;
}
.questList {
    background-color: #e1e9ee;
    width: 80%;
    height: 15%;
    margin: auto;
    margin-bottom: 3vh;
    margin-top: 3vh;
    padding: 4%;
    border-radius: 10px;
}
.questListRead {
    background-color: gainsboro;
    width: 80%;
    height: 15%;
    margin: auto;
    margin-bottom: 3vh;
    margin-top: 3vh;
    padding: 4%;
}
.questEntry img {
    position: relative;
    max-width: 5vw;
    max-height: 5vh;
    right: 0;
    float: left;
    margin: 1%;
}
.questStatus {
    float: right;
}
.questBodyBtn {
    font-family: VT323;
    background-color: white;
    width: 100%;
    color: #868BFE;
    padding: 5px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    border-radius: 15px;
}
#googleButton {
    font-family: VT323;
    color:white;
    background-color:#c0c0c0;
    padding-left: 2vw;
    padding-right: 2vw;
    width: 50vw;
    border-radius: 15px;
    margin: 5px;
}



/* QUEST DETAILS */
#QuestDetails {
    text-align: center;
}
.detailInfo{
    min-height: 15vh;
    padding-bottom: 2vh;
}
.startEnd{
    left: 0;
    right: 0;
    align-items: center; 
}
#startEnd {
    left: 0;
    right: 0;
    font-family: VT323;
    padding-left: 2vw;
    padding-right: 2vw;
    width: 50vw;
    /* -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%); */
    color:white;
    background-color:#868BFE;
    border-radius: 15px;
}


/* MAP */
#Map {
    text-align: center;
}
#map {
    /* position: fixed;
    top: 17vh; */
    bottom: 0;
    /* vw and vh stand for viewport width/height. We are getting these in html file */
    /* width: 100vw; */
    height: 90vh;
}

#questMap {
    /* position: fixed;
    top: 35vh; */
    bottom: 0;
    /* vw and vh stand for viewport width/height. We are getting these in html file */
    /* width: 100vw; */
    height: 90vh;
}

